--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
     <body>
         <div id="root">
         </div>
-    <script type="text/javascript" src="app.web.js"></script></body>
+    <script type="text/javascript" src="/app.web.js"></script></body>
 </html>
